fix scrollbar

--- a/react-client/src/assets/themes/reset.scss
+++ b/react-client/src/assets/themes/reset.scss
@@ -16,7 +16,3 @@ body {
   min-width: 1024px;
   user-select: none;
 }
-
-::-webkit-scrollbar {
-  display: none;
-}
